--- a/front-end-vue/src/assets/global.css
+++ b/front-end-vue/src/assets/global.css
@@ -7,23 +7,44 @@
 .flex {
     display: flex;
 }
+.column {
+    flex-direction: column;
+}
+.row {
+    flex-direction: row;
+}
+.wrap {
+    flex-wrap: wrap;
+}
 .justify-center {
     justify-content: center;
 }
 .justify-between {
     justify-content: space-between;
 }
+.justify-start {
+    justify-content: flex-start;
+}
 .align-center {
     align-items: center;
 }
-.column {
-    flex-direction: column;
+.align-start {
+    align-content: flex-start;
 }
 .ml-5 {
     margin-left: 5px;
 }
 .mr-5 {
     margin-right: 5px;
+}
+.mt-5 {
+    margin-top: 5px;
+}
+.mt-5 {
+    margin-top: 5px;
+}
+.mb-5 {
+    margin-bottom: 5px;
 }
 .pd-10 {
     padding: 10px 0;
